# zZnghialamZz.github.io

./: .gitignore  .gitmodules  .prettierrc  404.html  CMakeLists.txt  LICENSE  README.md  app-3c82f735a62fa63e3b93.js  app-3c82f735a62fa63e3b93.js.map  app-6b11599c4bbf6993f9a6.js  app-6b11599c4bbf6993f9a6.js.map  app-c500076b388344d44a41.js  app-c500076b388344d44a41.js.map  chunk-map.json  component---src-pages-404-js-a7ca9b8246ca631af6f7.js  component---src-pages-404-js-a7ca9b8246ca631af6f7.js.map  component---src-pages-404-js-b42bb29325b825d027a8.js  component---src-pages-404-js-b42bb29325b825d027a8.js.map  component---src-pages-404-js-d7706da3bbadd62270f6.js  component---src-pages-404-js-d7706da3bbadd62270f6.js.map  component---src-pages-index-js-26ffe70db6f022192bd0.js  component---src-pages-index-js-26ffe70db6f022192bd0.js.map  component---src-pages-index-js-450f8a3d465515154dbe.js  component---src-pages-index-js-450f8a3d465515154dbe.js.map  component---src-pages-index-js-5b34b9db084340f1ddd5.js  component---src-pages-index-js-5b34b9db084340f1ddd5.js.map  component---src-pages-index-js-a7d63735eadeb3040a76.js  component---src-pages-index-js-a7d63735eadeb3040a76.js.map  component---src-pages-index-js-de60556e21791f834ae4.js  component---src-pages-index-js-de60556e21791f834ae4.js.map  component---src-pages-index-js-dec7a66532353bdad383.js  component---src-pages-index-js-dec7a66532353bdad383.js.map  e50e9c162871c1d91fba5ce567a5656e16dc6783-1be2b493364ea54295c9.js  e50e9c162871c1d91fba5ce567a5656e16dc6783-1be2b493364ea54295c9.js.map  e50e9c162871c1d91fba5ce567a5656e16dc6783-879832885bba275aff95.js  e50e9c162871c1d91fba5ce567a5656e16dc6783-879832885bba275aff95.js.map  e50e9c162871c1d91fba5ce567a5656e16dc6783-b6a8a0b13a0a4e6e034c.js  e50e9c162871c1d91fba5ce567a5656e16dc6783-b6a8a0b13a0a4e6e034c.js.map  gatsby-config.js  gatsby-node.js  (+21 more)
404/: index.html
content/about/: index.md
content/contact/: index.md
content/intro/: index.md
offline-plugin-app-shell-fallback/: index.html
page-data/: app-data.json
src/: App.tsx  config.js
(+45 files in other folders)
