# Default setup
cmake_minimum_required(VERSION 3.2)
project(portfolio LANGUAGES CXX)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

# C++17 support
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Compiler flags
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")

# CMake defaults to leaving CMAKE_BUILD_TYPE empty. This screws up
# differentiation between debug and release builds.
if (CMAKE_BUILD_TYPE STREQUAL "")
  set(CMAKE_BUILD_TYPE "Debug"
    CACHE STRING "Choose the type of build, options are: None (CMAKE_CXX_FLAGS or CMAKE_C_FLAGS used) \"Debug\" \"Release\" \"RelWithDebInfo\" \"MinSizeRel\"." FORCE)
endif()

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# Organize build folders
set(PROJECT_PATH ${CMAKE_CURRENT_SOURCE_DIR})
set(PROJECT_BIN "bin")
set(PROJECT_LIB "lib")

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_PATH}/${PROJECT_BIN})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${PROJECT_PATH}/${PROJECT_BIN})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${PROJECT_PATH}/${PROJECT_BIN})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${PROJECT_PATH}/${PROJECT_BIN})

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_PATH}/${PROJECT_BIN})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${PROJECT_PATH}/${PROJECT_BIN})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${PROJECT_PATH}/${PROJECT_BIN})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO ${PROJECT_PATH}/${PROJECT_BIN})

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_PATH}/${PROJECT_BIN}/${PROJECT_LIB})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${PROJECT_PATH}/${PROJECT_BIN}/${PROJECT_LIB})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${PROJECT_PATH}/${PROJECT_BIN}/${PROJECT_LIB})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO ${PROJECT_PATH}/${PROJECT_BIN}/${PROJECT_LIB})

# Build Sources
set(PROJECT_SRC_DIR "${CMAKE_CURRENT_LIST_DIR}/src")

set(HEADERS
  "${PROJECT_SRC_DIR}/main.h"
  )

set(SOURCES
  "${PROJECT_SRC_DIR}/main.cpp"
  )

add_executable(portfolio ${SOURCES} ${HEADERS})
